Fix search box overlapping on mobile (#450)
* fix searchbox overlapping on mobile

* also adjust log in background color in theme

* Fix unit tests

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -118,7 +118,7 @@ a.two-factor-cancel {
 	width: 155px;
 	max-width: 50%;
 	cursor: text;
-	background-color: transparent;
+	background-color: #0082c9;
 	border: 1px solid rgba(255, 255, 255, .5);
 }
 
